# lib-json-haskell

./: .gitignore  CHANGELOG.md  README.md  projeto-lib.cabal
app/: Main.hs
src/: Prettify.hs  PrettyJSON.hs  PutJSON.hs  SimpleJSON.hs
test/: Spec.hs
