cabal-version:       2.2

name:                projeto-lib
version:             0.1.0.0
-- synopsis:
-- description:
homepage:            https://github.com/gfcarvalhos/lib-json-haskell#readme
license:             BSD-3-Clause
license-file:        LICENSE
author:              Gabriel Felipe Carvalho Silva
maintainer:          gfc.silva@discente.ufma.br
copyright:           2025 Gabriel Felipe Carvalho Silva
category:            Web
build-type:          Simple
extra-source-files:  README.md
                     CHANGELOG.md

library
  hs-source-dirs:      src
  exposed-modules:     SimpleJSON
                      , PutJSON
                      , Prettify
                      , PrettyJSON
  build-depends:       base >=4.7 && <5
  default-language:    Haskell2010
  
executable projeto-lib
  hs-source-dirs:      app
  main-is:             Main.hs
  default-language:    Haskell2010
  build-depends:       base >= 4.7 && < 5,
                       projeto-lib
  ghc-options:         -Wall
                       -Wcompat
                       -Widentities
                       -Wincomplete-record-updates
                       -Wincomplete-uni-patterns
                       -Wmissing-export-lists
                       -Wmissing-home-modules
                       -Wpartial-fields
                       -Wredundant-constraints

source-repository head
  type:     git
  location: https://github.com/gfcarvalhos/lib-json-haskell
